stretchy image fix

--- a/web/themes/custom/sfgovpl/src/sass/block/_block-instagram-feed.scss
+++ b/web/themes/custom/sfgovpl/src/sass/block/_block-instagram-feed.scss
@@ -11,6 +11,7 @@
       padding-right: 20px;
       > img {
         width: 100%;
+        align-self: top;
       }
     }
   }
